--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-23",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 12657904
+  "seed": 1859801077,
+  "date": "2024-Jul-23",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
