--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "date": "2024-Jul-23",
-  "seed": 1238906244
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1896449369,
+  "date": "2024-Jul-23"
 }
