--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1851146886,
-  "date": "2024-Jul-23",
-  "rate": "5.33"
+  "rate": "5.33",
+  "date": "2024-Jul-24",
+  "seed": 877504454,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
