--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1381241740,
   "rate": "5.33",
-  "date": "2024-Jul-24",
-  "seed": 440307860,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Jul-24"
 }
