--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1381241740,
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-24"
+  "date": "2024-Jul-24",
+  "seed": 897475225,
+  "rate": "5.33"
 }
