--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "seed": 2077375532,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-24"
+  "seed": 234961249,
+  "date": "2024-Jul-24",
+  "rate": "5.33"
 }
