--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 234961249,
-  "date": "2024-Jul-24",
-  "rate": "5.33"
+  "seed": 1063798850,
+  "rate": "5.33",
+  "date": "2024-Jul-24"
 }
