--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 284154741,
+  "seed": 797141142,
+  "date": "2024-Jul-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "date": "2024-Jul-24"
+  "rate": "5.33"
 }
