--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1295337438,
   "date": "2024-Jul-25",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1074257836
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
