--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-25",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 942967068
+  "seed": 1326936958,
+  "date": "2024-Jul-25",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
