--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 719759107,
   "date": "2024-Jul-26",
-  "rate": "5.33",
-  "seed": 1335231383,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
