--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1130852901,
   "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-26",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1977558101
 }
