--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1302271136,
   "rate": "5.33",
-  "seed": 944743263,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-26"
+  "date": "2024-Jul-26",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
