--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 833951826,
-  "date": "2024-Jul-26"
+  "seed": 614571885,
+  "date": "2024-Jul-26",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
