--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-29",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 697700586
+  "seed": 1372173509,
+  "date": "2024-Jul-29"
 }
