--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 1372173509,
-  "date": "2024-Jul-29"
+  "date": "2024-Jul-29",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1903528067
 }
