--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-29",
-  "seed": 2062547757
+  "seed": 1205860424,
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
