--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1768637302,
+  "date": "2024-Jul-29",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1279592097,
-  "rate": "5.33",
-  "date": "2024-Jul-29"
+  "rate": "5.33"
 }
