--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1913631955,
   "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Jul-30",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 40716690
 }
