--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1486951313,
+  "date": "2024-Jul-30",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-30"
+  "seed": 1487956341,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
