--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Jul-30",
+  "seed": 1182177278,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 141771147
+  "date": "2024-Jul-30",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
