--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1297663218,
   "date": "2024-Jul-31",
-  "seed": 484701194,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
