--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1795236462,
   "rate": "5.33",
-  "date": "2024-Jul-31",
-  "seed": 501297667,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Jul-31"
 }
