--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
   "date": "2024-Jul-31",
-  "seed": 1341969073
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1586095705,
+  "rate": "5.33"
 }
