--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1730990561,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Jul-31",
-  "seed": 1874785768,
-  "rate": "5.33"
+  "rate": "5.33",
+  "date": "2024-Aug-1"
 }
