--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1730990561,
+  "date": "2024-Aug-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "date": "2024-Aug-1"
+  "seed": 124686999,
+  "rate": "5.33"
 }
