--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 264471564,
   "date": "2024-Aug-1",
-  "seed": 1841284545
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
