--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-1",
+  "seed": 56694492,
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2147431393,
-  "rate": "5.33"
+  "date": "2024-Aug-1"
 }
