--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 56694492,
+  "seed": 1954980931,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-1"
+  "date": "2024-Aug-1",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
