--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1954980931,
+  "seed": 1042434622,
   "rate": "5.33",
-  "date": "2024-Aug-1",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Aug-1"
 }
