--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1382967417,
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-2",
-  "rate": "5.33"
+  "seed": 3559819,
+  "date": "2024-Aug-2"
 }
