--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1106718215,
-  "date": "2024-Aug-2"
+  "date": "2024-Aug-2",
+  "rate": "5.33",
+  "seed": 1417367224
 }
