--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 1768452641,
-  "date": "2024-Aug-2"
+  "seed": 252082879,
+  "date": "2024-Aug-2",
+  "rate": "5.33"
 }
