--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 252082879,
+  "seed": 164678604,
+  "rate": "5.33",
   "date": "2024-Aug-2",
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
