--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 164678604,
-  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 925034558,
   "date": "2024-Aug-2",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "5.33"
 }
