--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 925034558,
+  "rate": "5.33",
+  "seed": 440612158,
   "date": "2024-Aug-2",
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
