--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1670015054,
-  "rate": "5.33",
-  "date": "2024-Aug-2",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Aug-5",
+  "seed": 879459640,
+  "rate": "5.33"
 }
