--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1391135704,
+  "seed": 1356746534,
+  "date": "2024-Aug-5",
   "rate": "5.33",
-  "date": "2024-Aug-5"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
