--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 826461912,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-5",
-  "rate": "5.33"
+  "seed": 1003590790,
+  "rate": "5.33",
+  "date": "2024-Aug-5"
 }
