--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Aug-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 1671258375,
-  "date": "2024-Aug-5"
+  "seed": 43400621,
+  "rate": "5.33"
 }
