--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1609556274,
-  "date": "2024-Aug-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "rate": "5.33",
+  "seed": 1967475375,
+  "date": "2024-Aug-6"
 }
