--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-6",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 1744805449,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Aug-6",
+  "seed": 533190903
 }
