--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 862956016,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 594712801,
   "date": "2024-Aug-6",
-  "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "5.33"
 }
