--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-6",
+  "seed": 866642262,
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1656670820,
-  "rate": "5.33"
+  "date": "2024-Aug-6"
 }
