--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 866642262,
+  "date": "2024-Aug-6",
+  "seed": 1478602623,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-6"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
