--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2080728874,
+  "rate": "5.33",
   "date": "2024-Aug-7",
-  "rate": "5.33"
+  "seed": 2130592980
 }
