--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
+  "seed": 1077395531,
   "date": "2024-Aug-7",
-  "seed": 2130592980
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
