--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1296038850,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "date": "2024-Aug-7"
+  "date": "2024-Aug-7",
+  "seed": 1074816381
 }
