--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-8",
+  "seed": 572521693,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "seed": 1629044988,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Aug-8"
 }
