--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 572521693,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Aug-8",
   "rate": "5.33",
-  "date": "2024-Aug-8"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 55050683
 }
