--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-8",
   "rate": "5.33",
+  "seed": 1344255939,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 55050683
+  "date": "2024-Aug-8"
 }
