--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-8",
+  "seed": 1664038592,
   "rate": "5.33",
-  "seed": 1760807509
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Aug-8"
 }
