--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-8",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1660534355,
-  "rate": "5.33"
+  "rate": "5.33",
+  "date": "2024-Aug-9",
+  "seed": 236661635,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
