--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 292843217,
+  "seed": 416592345,
   "date": "2024-Aug-9",
-  "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
