--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 416592345,
+  "rate": "5.33",
   "date": "2024-Aug-9",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "seed": 1781377713,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
