--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1695285216,
-  "date": "2024-Aug-9",
+  "seed": 1167428018,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Aug-9"
 }
