--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1329057326,
+  "date": "2024-Aug-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
-  "seed": 2063828245,
-  "date": "2024-Aug-12"
+  "rate": "5.33"
 }
