--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
   "date": "2024-Aug-12",
-  "seed": 1734477367,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "seed": 1539602548,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
