--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 110002457,
   "rate": "5.33",
-  "seed": 928061130,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-13"
+  "date": "2024-Aug-13",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
