--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 110002457,
-  "rate": "5.33",
   "date": "2024-Aug-13",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1313599913,
+  "rate": "5.33"
 }
