--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 402369121,
+  "date": "2024-Aug-14",
   "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-14"
+  "seed": 1641285934
 }
