--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "seed": 1151067874,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Aug-14",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 391056727,
+  "rate": "5.33"
 }
