--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-14",
-  "seed": 391056727,
-  "rate": "5.33"
+  "rate": "5.33",
+  "seed": 1480426809,
+  "date": "2024-Aug-14"
 }
