--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1473457260,
   "rate": "5.33",
-  "date": "2024-Aug-14"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Aug-14",
+  "seed": 1125726664
 }
