--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 807801869,
-  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-14"
+  "date": "2024-Aug-14",
+  "seed": 2143094816,
+  "rate": "5.33"
 }
