--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 483697693,
-  "date": "2024-Aug-15",
+  "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33"
+  "date": "2024-Aug-15",
+  "seed": 159541817
 }
