--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-15",
-  "seed": 159541817
+  "seed": 536409998,
+  "date": "2024-Aug-15"
 }
