--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "5.33",
-  "date": "2024-Aug-15",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1845765908
+  "seed": 1572539710,
+  "date": "2024-Aug-15"
 }
