--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2024-Aug-15",
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1572539710,
-  "date": "2024-Aug-15"
+  "seed": 521702017,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
