--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-15",
-  "rate": "5.33",
+  "date": "2024-Aug-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 194819379
+  "seed": 650214183,
+  "rate": "5.33"
 }
