--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Aug-16",
+  "seed": 979911876,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 650214183,
-  "rate": "5.33"
+  "rate": "5.33",
+  "date": "2024-Aug-16"
 }
