--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1379782199,
+  "date": "2024-Aug-16",
   "rate": "5.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Aug-16"
+  "seed": 1513948183
 }
