--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1514611042,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 953100491,
   "date": "2024-Aug-16",
-  "rate": "5.33"
+  "rate": "5.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
