--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 40383129,
   "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 68382803,
-  "date": "2024-Aug-16"
+  "date": "2024-Aug-16",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
