--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1038053849,
   "rate": "5.33",
-  "date": "2024-Aug-16"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Aug-16",
+  "seed": 1800999921
 }
