--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "5.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Aug-16",
-  "seed": 1800999921
+  "seed": 584681858,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33"
 }
