--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1394882383,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Aug-19",
-  "rate": "5.33"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "5.33",
+  "seed": 474787581
 }
