--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "5.33",
-  "date": "2024-Aug-20",
-  "seed": 2014614156,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1338804164,
+  "date": "2024-Aug-20"
 }
