--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "5.33",
   "date": "2024-Aug-20",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1441885192,
-  "rate": "5.33"
+  "seed": 1583381562,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
