--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1962298998,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "5.33",
   "date": "2024-Aug-20",
-  "seed": 1490744491
+  "rate": "5.33"
 }
