--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2024-Oct-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 202556451,
-  "rate": "4.83"
+  "rate": "4.83",
+  "seed": 122335927
 }
