--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 122335927
+  "seed": 748325397,
+  "date": "2024-Oct-1"
 }
