--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1980690702,
   "rate": "4.83",
-  "seed": 2049829149
+  "date": "2024-Oct-1"
 }
