--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1914456981,
   "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2024-Oct-1",
-  "seed": 1990966790
+  "date": "2024-Oct-2"
 }
