--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 979429157,
+  "rate": "4.83",
   "date": "2024-Oct-2",
-  "rate": "4.83"
+  "seed": 717903595
 }
