--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 65694409,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
   "date": "2024-Oct-2",
-  "seed": 717903595
+  "rate": "4.83"
 }
