--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2024-Oct-3",
-  "rate": "4.83",
-  "seed": 2011922473,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 785049783,
+  "rate": "4.83"
 }
