--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-3",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "seed": 1194705214
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2119779707,
+  "date": "2024-Oct-3"
 }
