--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2024-Oct-4",
-  "rate": "4.83",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1264027380
+  "seed": 1113823031,
+  "date": "2024-Oct-4",
+  "rate": "4.83"
 }
