--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 835245315,
+  "seed": 147043126,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.83",
-  "date": "2024-Oct-4",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2024-Oct-4"
 }
