--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1037860649,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.83",
-  "date": "2024-Oct-4"
+  "seed": 1615835474,
+  "date": "2024-Oct-4",
+  "rate": "4.83"
 }
