--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 61897570,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.83",
+  "seed": 1364339040,
   "date": "2024-Oct-4",
-  "rate": "4.83"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
