--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.83",
-  "seed": 1364339040,
-  "date": "2024-Oct-4",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1151657353,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2024-Oct-4"
 }
